--- a/assets/scss/admin/drawer.scss
+++ b/assets/scss/admin/drawer.scss
@@ -79,6 +79,9 @@
     .nf-master-control {
         bottom: 80px;
     }
+    .nf-fields-sortable {
+        padding-bottom: 60px;
+    }
 }
 .nf-drawer-opened {
     #nf-mp-drawer {
